removes deprecated method